infra/k8s/bird-Image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bird-image
  namespace: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bird-image
  template:
    metadata:
      labels:
        app: bird-image
    spec:
      containers:
      - name: bird-image
        image: demarauder/bird-image:latest
        ports:
        - containerPort: 4200
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: bird-image-service
  namespace: "api"
spec:
  selector:
    app: bird-image
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4200
