infra/k8s/bird.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bird
  namespace: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bird
  template:
    metadata:
      labels:
        app: bird
    spec:
      containers:
      - name: bird
        image: de-marauder/bird:latest
        ports:
        - containerPort: 4201
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: bird-service
  namespace: "api"
spec:
  selector:
    app: bird
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4201
